err/comictagger.err
Listing '.'...
Listing './bin'...
Compiling './bin/comictagger.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/backports'...
Listing './lib/python3.5/site-packages/backports/configparser'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/comictagger-1.1.15b0.egg-info'...
Listing './lib/python3.5/site-packages/comictaggerlib'...
Listing './lib/python3.5/site-packages/comictaggerlib/UnRAR2'...
Listing './lib/python3.5/site-packages/comictaggerlib/UnRAR2/UnRARDLL'...
Listing './lib/python3.5/site-packages/comictaggerlib/UnRAR2/UnRARDLL/x64'...
Compiling './lib/python3.5/site-packages/comictaggerlib/UnRAR2/windows.py'...
***   File "./lib/python3.5/site-packages/comictaggerlib/UnRAR2/windows.py", line 298
    raise DeprecationWarning, "Condition callbacks returning strings are deprecated and only supported in Windows"
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/comictaggerlib/cli.py'...
***   File "./lib/python3.5/site-packages/comictaggerlib/cli.py", line 93
    print u"{0}".format(md)
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/comictaggerlib/comicarchive.py'...
***   File "./lib/python3.5/site-packages/comictaggerlib/comicarchive.py", line 720
    sorted_buckets = sorted(length_buckets.iteritems(), key=lambda (k,v): (v,k), reverse=True)
                                                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/comictaggerlib/comicvinetalker.py'...
***   File "./lib/python3.5/site-packages/comictaggerlib/comicvinetalker.py", line 558
    print "width=" , width
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/comictaggerlib/graphics'...
Compiling './lib/python3.5/site-packages/comictaggerlib/imagefetcher.py'...
***   File "./lib/python3.5/site-packages/comictaggerlib/imagefetcher.py", line 91
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/comictaggerlib/imagehasher.py'...
***   File "./lib/python3.5/site-packages/comictaggerlib/imagehasher.py", line 47
    print "Image data seems corrupted!"
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/comictaggerlib/issueidentifier.py'...
***   File "./lib/python3.5/site-packages/comictaggerlib/issueidentifier.py", line 137
    print "cropCover() error:", e
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/comictaggerlib/main.py'...
***   File "./lib/python3.5/site-packages/comictaggerlib/main.py", line 54
    print "Key set"
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/comictaggerlib/optionalmsgdialog.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (optionalmsgdialog.py, line 83)
Compiling './lib/python3.5/site-packages/comictaggerlib/options.py'...
***   File "./lib/python3.5/site-packages/comictaggerlib/options.py", line 136
    print self.help_text.format(appname)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/comictaggerlib/renamewindow.py'...
***   File "./lib/python3.5/site-packages/comictaggerlib/renamewindow.py", line 142
    print item['new_name'] , "Filename is already good!"
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/comictaggerlib/taggerwindow.py'...
***   File "./lib/python3.5/site-packages/comictaggerlib/taggerwindow.py", line 97
    print "Another application with key [{}] is already running".format( settings.install_id)
                                                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/comictaggerlib/ui'...
Compiling './lib/python3.5/site-packages/comictaggerlib/volumeselectionwindow.py'...
***   File "./lib/python3.5/site-packages/comictaggerlib/volumeselectionwindow.py", line 185
    print unicode(text),
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/configparser-3.5.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
